@@ -61,9 +61,7 @@ import uk.gov.hmcts.reform.prl.enums.manageorders.OtherOrganisationOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.SelectTypeOfOrderEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.ServeOtherPartiesOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.WithDrawTypeOfOrderEnum;
-import uk.gov.hmcts.reform.prl.enums.sdo.SdoFurtherInstructionsEnum;
 import uk.gov.hmcts.reform.prl.enums.sdo.SdoHearingsAndNextStepsEnum;
-import uk.gov.hmcts.reform.prl.enums.sdo.SdoLocalAuthorityEnum;
 import uk.gov.hmcts.reform.prl.enums.serveorder.CafcassCymruDocumentsEnum;
 import uk.gov.hmcts.reform.prl.enums.serveorder.LocalAuthorityDocumentsEnum;
 import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaSolicitorServingRespondentsEnum;
@@ -120,6 +118,7 @@ import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentResponse;
 import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentServiceResponse;
 import uk.gov.hmcts.reform.prl.models.user.UserRoles;
+import uk.gov.hmcts.reform.prl.models.wa.AdditionalProperties;
 import uk.gov.hmcts.reform.prl.services.dynamicmultiselectlist.DynamicMultiSelectListService;
 import uk.gov.hmcts.reform.prl.services.hearings.HearingService;
 import uk.gov.hmcts.reform.prl.services.localauthority.RemoveLocalAuthoritySolicitorService;
@@ -127,6 +126,7 @@ import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
 import uk.gov.hmcts.reform.prl.services.time.Time;
 import uk.gov.hmcts.reform.prl.utils.AutomatedHearingTransactionRequestMapper;
 import uk.gov.hmcts.reform.prl.utils.ElementUtils;
+import uk.gov.hmcts.reform.prl.utils.TaskUtils;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -137,6 +137,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Stream;
 
@@ -201,6 +202,7 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
+@SuppressWarnings("unchecked")
 class ManageOrderServiceTest {
 
     @InjectMocks
@@ -274,6 +276,9 @@ class ManageOrderServiceTest {
 
     @Mock
     private AllTabServiceImpl allTabService;
+
+    @Mock
+    private TaskUtils taskUtils;
 
     @Captor
     private ArgumentCaptor<String> eventIdCaptor;
@@ -696,7 +701,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -732,7 +737,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -768,7 +773,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -804,7 +809,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -840,7 +845,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -876,7 +881,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -993,7 +998,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1029,7 +1034,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1064,7 +1069,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1101,7 +1106,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1407,7 +1412,7 @@ class ManageOrderServiceTest {
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
 
         manageOrderService.updateCaseDataWithAppointedGuardianNames(caseDetails, namesList);
-        assertEquals("Full Name", caseDataNameList.get(0).getValue().getGuardianFullName());
+        assertEquals("Full Name", caseDataNameList.getFirst().getValue().getGuardianFullName());
     }
 
 
@@ -1538,7 +1543,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1575,7 +1580,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1608,7 +1613,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1645,8 +1650,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
-        List<OrderRecipientsEnum> recipientList = new ArrayList<>();
+
         List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder()
             .solicitorOrg(Organisation.builder().organisationName("test Org").build())
@@ -1693,7 +1697,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -1730,7 +1734,7 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        Map<String, Object> caseDataUpdated = new HashMap<>();
+        Map<String, Object> caseDataUpdated;
 
         CaseData caseData = CaseData.builder()
             .id(12345L)
@@ -2153,32 +2157,13 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-
-        List<DynamicMultiselectListElement> elements = new ArrayList<>();
-        DynamicMultiselectListElement element = DynamicMultiselectListElement.builder()
-            .code("1234")
-            .label("test label").build();
-        elements.add(element);
-        Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
-                                                                                          .builder()
-                                                                                          .orderDocument(Document
-                                                                                                             .builder()
-                                                                                                             .build())
-                                                                                          .dateCreated(now)
-                                                                                          .orderTypeId(TEST_UUID)
-                                                                                          .otherDetails(
-                                                                                              OtherOrderDetails.builder().build())
-                                                                                          .build()).build();
-        List<Element<OrderDetails>> orderList = new ArrayList<>();
-        orderList.add(orders);
         when(dgsService.generateDocument(Mockito.anyString(), Mockito.any(CaseDetails.class), Mockito.any()))
             .thenReturn(generatedDocumentInfo);
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         when(hearingService.createAutomatedHearing(authToken, null))
             .thenThrow(new ManageOrderRuntimeException("Invalid Json"));
-        Exception exception = assertThrows(ManageOrderRuntimeException.class, () -> {
-            hearingService.createAutomatedHearing(authToken, null);
-        });
+        Exception exception = assertThrows(ManageOrderRuntimeException.class,
+                                           () -> hearingService.createAutomatedHearing(authToken, null));
         String expectedMessage = "Invalid Json";
         assertTrue(expectedMessage.contains(exception.getMessage()));
     }
@@ -2212,8 +2197,6 @@ class ManageOrderServiceTest {
                                                       .build())))
             .build();
 
-        OrderDetails orderDetails = OrderDetails.builder().typeOfOrder("kkkkk").dateCreated(LocalDateTime.now()).build();
-        Element<OrderDetails> orders1 = element(orderDetails);
         Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
                                                                                           .builder()
                                                                                           .orderTypeId(TEST_UUID)
@@ -2273,8 +2256,6 @@ class ManageOrderServiceTest {
                                                       .build())))
             .build();
 
-        OrderDetails orderDetails = OrderDetails.builder().typeOfOrder("kkkkk").dateCreated(LocalDateTime.now()).build();
-        Element<OrderDetails> orders1 = element(orderDetails);
         Element<OrderDetails> orders = Element.<OrderDetails>builder().id(uuid).value(OrderDetails
                                                                                           .builder()
                                                                                           .orderType("null")
@@ -3632,7 +3613,7 @@ class ManageOrderServiceTest {
         when(hearingService.getHearings(authToken, "123")).thenReturn(hearings);
 
         //invoke
-        DynamicList dynamicList1 = manageOrderService.populateHearingsDropdown(authToken, caseData);
+        manageOrderService.populateHearingsDropdown(authToken, caseData);
 
         //asserts
         assertNotNull(caseData.getManageOrders().getHearingsType());
@@ -3748,7 +3729,7 @@ class ManageOrderServiceTest {
             .build();
         when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
         manageOrderService.resetChildOptions(callbackRequest);
-        assertEquals(null, callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
+        assertNull(callbackRequest.getCaseDetails().getData().get(CHILD_OPTION));
     }
 
     @Test
@@ -3805,15 +3786,6 @@ class ManageOrderServiceTest {
 
     @Test
     void testGetJudgeFullName() {
-        StandardDirectionOrder standardDirectionOrder = StandardDirectionOrder.builder()
-            .sdoAllocateOrReserveJudgeName(JudicialUser.builder().idamId("1234").personalCode("ABC").build())
-            .sdoLocalAuthorityList(of(SdoLocalAuthorityEnum.localAuthorityLetter))
-            .sdoFurtherList(of(SdoFurtherInstructionsEnum.newDirection))
-            .build();
-        CaseData caseData = CaseData.builder()
-            .id(12345L)
-            .standardDirectionOrder(standardDirectionOrder)
-            .build();
         List<JudicialUsersApiResponse> judicialUsersApiResponses = new ArrayList<>();
         JudicialUsersApiResponse judicialUsersApiResponse = JudicialUsersApiResponse.builder()
             .fullName("Test")
@@ -3950,7 +3922,7 @@ class ManageOrderServiceTest {
         when(dynamicMultiSelectListService.getChildrenMultiSelectList(caseData)).thenReturn(of(dynamicMultiselectListElementUpdated));
 
         CaseData caseData1 = manageOrderService.setChildOptionsIfOrderAboutAllChildrenYes(caseData);
-        assertEquals("John (Child 1)", caseData1.getManageOrders().getChildOption().getListItems().get(0).getLabel());
+        assertEquals("John (Child 1)", caseData1.getManageOrders().getChildOption().getListItems().getFirst().getLabel());
     }
 
     @Test
@@ -4011,7 +3983,7 @@ class ManageOrderServiceTest {
     void testCleanUpSelectedManageOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("manageOrdersOptions","manageOrdersOptions");
-        manageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
+        ManageOrderService.cleanUpSelectedManageOrderOptions(caseDataUpdated);
         assertNull(caseDataUpdated.get("manageOrdersOptions"));
 
     }
@@ -4119,7 +4091,7 @@ class ManageOrderServiceTest {
         assertNotNull(caseDataUpdated.get("additionalOrderDocuments"));
         List<Element<AdditionalOrderDocument>> additionalOrderDocuments =
             (List<Element<AdditionalOrderDocument>>) caseDataUpdated.get("additionalOrderDocuments");
-        assertEquals(2, additionalOrderDocuments.get(0).getValue().getAdditionalDocuments().size());
+        assertEquals(2, additionalOrderDocuments.getFirst().getValue().getAdditionalDocuments().size());
     }
 
     @Test
@@ -4153,7 +4125,7 @@ class ManageOrderServiceTest {
     void testCleanUpServeOrderOptions() {
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("serveOrderAdditionalDocuments","serveOrderAdditionalDocuments");
-        manageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
+        ManageOrderService.cleanUpServeOrderOptions(caseDataUpdated);
         assertNull(caseDataUpdated.get("serveOrderAdditionalDocuments"));
     }
 
@@ -4567,7 +4539,6 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderList = new ArrayList<>();
         orderList.add(orders);
 
-        List<Element<PartyDetails>> partyDetails = new ArrayList<>();
         PartyDetails details = PartyDetails.builder().firstName("first").lastName("lastname")
             .representativeFirstName("repFirstName")
             .representativeLastName("repLastName")
@@ -4937,7 +4908,7 @@ class ManageOrderServiceTest {
                                  .code("6bb5e9ac-df97-4593-8b22-3969dc0bb4e1")
                                  .label("Sam Nolan")
                                  .build());
-        CaseData caseData = CaseData.builder()
+        return CaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
             .manageOrders(ManageOrders.builder().serveToRespondentOptions(YesNoNotApplicable.No)
                               .recipientsOptions(DynamicMultiSelectList.builder()
@@ -4950,7 +4921,6 @@ class ManageOrderServiceTest {
                                                 .build())
                               .build())
             .build();
-        return caseData;
     }
 
     @Test
@@ -5299,7 +5269,7 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) response.get("orderCollection");
 
         assertEquals("Financial compensation order following C79 enforcement application (C82)",
-                     orderCollection.get(0).getValue().getOrderTypeId());
+                     orderCollection.getFirst().getValue().getOrderTypeId());
         assertNotNull(response);
 
     }
@@ -5720,7 +5690,7 @@ class ManageOrderServiceTest {
         CaseData caseDataResp = manageOrderService.setHearingDataForSdo(caseData, hearings, "auth");
         assertNull(caseData.getStandardDirectionOrder().getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab());
         assertEquals(uuid, caseDataResp.getStandardDirectionOrder()
-            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().get(0).getId());
+            .getSdoDirectionsForFactFindingHearingDetails().getHearingdataFromHearingTab().getFirst().getId());
     }
 
     @Test
@@ -5823,14 +5793,14 @@ class ManageOrderServiceTest {
         when(dateTime.now()).thenReturn(LocalDateTime.now());
         List<Element<OrderDetails>> orderDetails = manageOrderService.serveOrder(caseData, orderList);
         assertNotNull(orderDetails);
-        assertNotNull(orderDetails.get(0));
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties());
-        assertNotNull(orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0));
+        assertNotNull(orderDetails.getFirst());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties());
+        assertNotNull(orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst());
         assertEquals(
-            orderDetails.get(0).getValue().getServeOrderDetails().getServedParties().get(0).getValue()
+            orderDetails.getFirst().getValue().getServeOrderDetails().getServedParties().getFirst().getValue()
                 .getPartyId(),
-            (orders.getValue().getServeOrderDetails().getServedParties().get(0).getValue().getPartyId())
+            (orders.getValue().getServeOrderDetails().getServedParties().getFirst().getValue().getPartyId())
         );
     }
 
@@ -6312,9 +6282,8 @@ class ManageOrderServiceTest {
         List<Element<HearingData>> hearingsList = manageOrders1.getOrdersHearingDetails();
         when(hearingService.createAutomatedHearing(eq(authToken), any()))
             .thenThrow(new ManageOrderRuntimeException("Invalid Json"));
-        Exception exception = assertThrows(ManageOrderRuntimeException.class, () -> {
-            manageOrderService.createAutomatedHearingManagement(authToken, caseData, hearingsList);
-        });
+        Exception exception = assertThrows(ManageOrderRuntimeException.class,
+                                           () -> manageOrderService.createAutomatedHearingManagement(authToken, caseData, hearingsList));
         String expectedMessage = "Invalid Json";
         assertTrue(expectedMessage.contains(exception.getMessage()));
     }
@@ -6851,11 +6820,6 @@ class ManageOrderServiceTest {
             .hashToken("testHashToken")
             .build();
 
-        List<DynamicMultiselectListElement> elements = new ArrayList<>();
-        DynamicMultiselectListElement element = DynamicMultiselectListElement.builder()
-            .code("1234")
-            .label("test label").build();
-        elements.add(element);
         ManageOrders manageOrders = ManageOrders.builder()
             .judgeOrMagistrateTitle(JudgeOrMagistrateTitleEnum.circuitJudge)
             .build();
@@ -6888,14 +6852,6 @@ class ManageOrderServiceTest {
                                                                                           .build()).build();
         List<Element<OrderDetails>> orderList = new ArrayList<>();
         orderList.add(orders);
-
-        List<Element<PartyDetails>> partyDetails = new ArrayList<>();
-        PartyDetails details = PartyDetails.builder().firstName("first").lastName("lastname")
-            .solicitorOrg(Organisation.builder().organisationName("test Org").build())
-            .build();
-        Element<PartyDetails> partyDetailsElement = element(details);
-        partyDetails.add(partyDetailsElement);
-
 
 
         when(dgsService.generateDocument(Mockito.anyString(), Mockito.any(CaseDetails.class), Mockito.any()))
@@ -7007,6 +6963,48 @@ class ManageOrderServiceTest {
         assertEquals(OrganisationPolicy.builder().organisation(
             Organisation.builder().build()).orgPolicyCaseAssignedRole(LOCAL_AUTHORITY_SOLICITOR_CASE_ROLE).build(),
             caseDataUpdated.get(LOCAL_AUTHORITY_SOLICITOR_ORGANISATION_POLICY));
+        LocalAuthority updated = (LocalAuthority) caseDataUpdated.get(LOCAL_AUTHORITY_DATA);
+        assertNull(updated.getLocalAuthoritySolicitorOrganisationName());
+        assertEquals(No, updated.getIsLocalAuthorityInvolvedInCase());
+
+    }
+
+    @Test
+    public void shouldRemoveLocalAuthorityFromCaseWhenDoesOrderClosesCaseIsYes() {
+        OrganisationPolicy organisationPolicy = OrganisationPolicy.builder()
+            .organisation(Organisation.builder().organisationName("OrgName").build())
+            .build();
+
+        Map<String, Object> caseDataUpdated = new HashMap<>();
+        caseDataUpdated.put("id", 12345L);
+        caseDataUpdated.put("caseTypeOfApplication", "C100");
+        caseDataUpdated.put(LOCAL_AUTHORITY_SOLICITOR_ORGANISATION_POLICY, organisationPolicy);
+        LocalAuthority localAuthority = LocalAuthority.builder()
+            .localAuthoritySolicitorOrganisationName("OrgName").isLocalAuthorityInvolvedInCase(Yes).build();
+
+        caseDataUpdated.put(LOCAL_AUTHORITY_DATA, localAuthority);
+
+        List<Element<OrderDetails>> newOrderDetails = new ArrayList<>();
+        newOrderDetails.add(ElementUtils.element(OrderDetails.builder().doesOrderClosesCase(Yes)
+                                                     .typeOfOrder(SelectTypeOfOrderEnum.finl.getDisplayedValue())
+                                                     .build()));
+
+        CaseData caseData = CaseData.builder()
+            .id(12345L)
+            .caseTypeOfApplication("C100")
+            .orderCollection(newOrderDetails)
+            .localAuthoritySolicitorOrganisationPolicy(organisationPolicy)
+            .localAuthority(localAuthority)
+            .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
+            .doesOrderClosesCase(Yes)
+            .build();
+
+        manageOrderService.removeLocalAuthorityFromCase(caseData, caseDataUpdated);
+
+        verify(removeLocalAuthoritySolicitorService, atLeast(1)).removeLocalAuthoritySolicitor(eq(caseData));
+        assertEquals(OrganisationPolicy.builder().organisation(
+                         Organisation.builder().build()).orgPolicyCaseAssignedRole(LOCAL_AUTHORITY_SOLICITOR_CASE_ROLE).build(),
+                     caseDataUpdated.get(LOCAL_AUTHORITY_SOLICITOR_ORGANISATION_POLICY));
         LocalAuthority updated = (LocalAuthority) caseDataUpdated.get(LOCAL_AUTHORITY_DATA);
         assertNull(updated.getLocalAuthoritySolicitorOrganisationName());
         assertEquals(No, updated.getIsLocalAuthorityInvolvedInCase());
@@ -7853,7 +7851,7 @@ class ManageOrderServiceTest {
         assertNotNull(serveOrderList);
         assertNotNull(serveOrderList.getValue());
         assertEquals(1, serveOrderList.getValue().size());
-        assertEquals(secondOrderId, serveOrderList.getValue().get(0).getCode());
+        assertEquals(secondOrderId, serveOrderList.getValue().getFirst().getCode());
     }
 
     @Test
@@ -7893,7 +7891,7 @@ class ManageOrderServiceTest {
         assertNotNull(serveOrderList);
         assertNotNull(serveOrderList.getValue());
         assertEquals(1, serveOrderList.getValue().size());
-        assertEquals(firstOrderId, serveOrderList.getValue().get(0).getCode());
+        assertEquals(firstOrderId, serveOrderList.getValue().getFirst().getCode());
     }
 
     @Test
@@ -7927,7 +7925,7 @@ class ManageOrderServiceTest {
         List<Element<DraftOrder>> draftOrders = (List<Element<DraftOrder>>) result.get("draftOrderCollection");
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
-        assertEquals(Yes, draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -7963,7 +7961,7 @@ class ManageOrderServiceTest {
         List<Element<DraftOrder>> draftOrders = (List<Element<DraftOrder>>) result.get("draftOrderCollection");
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
-        assertEquals(Yes, draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -7999,7 +7997,7 @@ class ManageOrderServiceTest {
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
         // uploadAnOrder does not have Page 19, so AHR should not be triggered
-        assertNull(draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertNull(draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
@@ -8034,11 +8032,11 @@ class ManageOrderServiceTest {
         assertNotNull(draftOrders);
         assertFalse(draftOrders.isEmpty());
         // Only COURT_ADMIN should trigger AHR
-        assertNull(draftOrders.get(0).getValue().getIsAutoHearingReqPending());
+        assertNull(draftOrders.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
-    void testSetFinalOrderCollection_courtAdmin_noCheck_eligibleForAhr_setsAutoHearingPending() throws Exception {
+    void testSetFinalOrderCollection_courtAdmin_noCheck_eligibleForAhr_setsAutoHearingPending() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .forename("Test")
             .surname("Admin")
@@ -8084,11 +8082,11 @@ class ManageOrderServiceTest {
         List<Element<OrderDetails>> orderCollection = (List<Element<OrderDetails>>) result.get(ORDER_COLLECTION);
         assertNotNull(orderCollection);
         assertFalse(orderCollection.isEmpty());
-        assertEquals(Yes, orderCollection.get(0).getValue().getIsAutoHearingReqPending());
+        assertEquals(Yes, orderCollection.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @Test
-    void testSetFinalOrderCollection_courtAdmin_noCheck_notEligibleForAhr_doesNotSetAutoHearingPending() throws Exception {
+    void testSetFinalOrderCollection_courtAdmin_noCheck_notEligibleForAhr_doesNotSetAutoHearingPending() {
         when(userService.getUserDetails(anyString())).thenReturn(UserDetails.builder()
             .forename("Test")
             .surname("Admin")
@@ -8131,7 +8129,7 @@ class ManageOrderServiceTest {
         assertNotNull(orderCollection);
         assertFalse(orderCollection.isEmpty());
         // When not eligible for AHR, flag should not be Yes (can be null or No)
-        assertNotEquals(Yes, orderCollection.get(0).getValue().getIsAutoHearingReqPending());
+        assertNotEquals(Yes, orderCollection.getFirst().getValue().getIsAutoHearingReqPending());
     }
 
     @ParameterizedTest(name = "Testing LA CIR document: {0}")
@@ -8151,6 +8149,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiledByLocalAuthority(LocalDate.now())
@@ -8162,7 +8161,7 @@ class ManageOrderServiceTest {
             authToken,
             EventRequestData.builder().build(),
             StartEventResponse.builder().build(),
-            new HashMap<String, Object>(),
+            new HashMap<>(),
             caseData,
             null
         );
@@ -8202,8 +8201,109 @@ class ManageOrderServiceTest {
 
         assertThat(waFieldsMap)
             .containsEntry("whenReportsMustBeFiledByLocalAuthority", LocalDate.now())
-            .containsEntry("performingUser", UserRoles.COURT_ADMIN.name());
+            .containsEntry("performingUser", UserRoles.COURT_ADMIN.name())
+            .containsEntry("isCirUpdateFollowUp", null);
         assertThat(waFieldsMap.get("whenReportsMustBeFiled")).isNull();
+    }
+
+    @Test
+    void testReCreateCirDocumentsRequestedTaskWhenCirUpdateRequestedPresent() {
+        CaseData caseData = CaseData.builder()
+            .id(12345678L)
+            .build();
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.findAndRegisterModules();
+
+        Map<String, Object> caseDataMap = caseData.toMap(mapper);
+        caseDataMap.put(IS_INVOKED_FROM_TASK, Yes);
+        uk.gov.hmcts.reform.ccd.client.model.CaseDetails caseDetails = uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .id(12345678L)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS.getValue())
+            .data(caseDataMap)
+            .build();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(caseDetails)
+            .build();
+
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
+        when(taskUtils.getTaskAdditionalProperties(CLIENT_CONTEXT))
+            .thenReturn(Optional.of(AdditionalProperties.builder().isCirUpdateFollowUp(Yes.getDisplayedValue()).build()));
+        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(
+            authToken,
+            EventRequestData.builder().build(),
+            StartEventResponse.builder().build(),
+            new HashMap<String, Object>(),
+            caseData,
+            null
+        );
+        when(allTabService.getStartUpdateForSpecificEvent(valueOf(caseData.getId()), CREATE_REQUEST_CIR_UPDATE_TASK.getValue()))
+            .thenReturn(startAllTabsUpdateDataContent);
+        when(allTabService.getStartUpdateForSpecificEvent(valueOf(caseData.getId()), UPDATE_ALL_TABS.getValue()))
+            .thenReturn(startAllTabsUpdateDataContent);
+
+
+        manageOrderService.reCreateCirDocumentsRequestedTask(callbackRequest, CLIENT_CONTEXT);
+
+        verify(allTabService)
+            .getStartUpdateForSpecificEvent(eq(valueOf(caseData.getId())), eventIdCaptor.capture());
+        assertThat(eventIdCaptor.getValue())
+            .isEqualTo(CREATE_REQUEST_CIR_UPDATE_TASK.getValue());
+
+        verify(allTabService)
+            .submitAllTabsUpdate(anyString(),
+                                 eq(valueOf(caseData.getId())),
+                                 any(StartEventResponse.class),
+                                 any(EventRequestData.class),
+                                 caseDataMapCaptor.capture());
+    }
+
+    @Test
+    void testReCreateCirDocumentsRequestedTaskWhenCirUpdateRequestedIsNotPresent() {
+        CaseData caseData = CaseData.builder()
+            .id(12345678L)
+            .build();
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.findAndRegisterModules();
+
+        Map<String, Object> caseDataMap = caseData.toMap(mapper);
+        caseDataMap.put(IS_INVOKED_FROM_TASK, Yes);
+        uk.gov.hmcts.reform.ccd.client.model.CaseDetails caseDetails = uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .id(12345678L)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS.getValue())
+            .data(caseDataMap)
+            .build();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(caseDetails)
+            .build();
+
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
+        when(taskUtils.getTaskAdditionalProperties(CLIENT_CONTEXT))
+            .thenReturn(Optional.of(AdditionalProperties.builder().build()));
+        StartAllTabsUpdateDataContent startAllTabsUpdateDataContent = new StartAllTabsUpdateDataContent(
+            authToken,
+            EventRequestData.builder().build(),
+            StartEventResponse.builder().build(),
+            new HashMap<String, Object>(),
+            caseData,
+            null
+        );
+        when(allTabService.getStartUpdateForSpecificEvent(valueOf(caseData.getId()), CREATE_REQUEST_CIR_UPDATE_TASK.getValue()))
+            .thenReturn(startAllTabsUpdateDataContent);
+        when(allTabService.getStartUpdateForSpecificEvent(valueOf(caseData.getId()), UPDATE_ALL_TABS.getValue()))
+            .thenReturn(startAllTabsUpdateDataContent);
+
+
+        manageOrderService.reCreateCirDocumentsRequestedTask(callbackRequest, CLIENT_CONTEXT);
+
+        verify(allTabService, never())
+            .getStartUpdateForSpecificEvent(eq(valueOf(caseData.getId())), eventIdCaptor.capture());
+
+        verify(allTabService, never())
+            .submitAllTabsUpdate(anyString(),
+                                 eq(valueOf(caseData.getId())),
+                                 any(StartEventResponse.class),
+                                 any(EventRequestData.class),
+                                 caseDataMapCaptor.capture());
     }
 
     @ParameterizedTest(name = "Testing Cafcass CIR document: {0}")
@@ -8223,6 +8323,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiled(LocalDate.now())
@@ -8234,7 +8335,7 @@ class ManageOrderServiceTest {
             authToken,
             EventRequestData.builder().build(),
             StartEventResponse.builder().build(),
-            new HashMap<String, Object>(),
+            new HashMap<>(),
             caseData,
             null
         );
@@ -8274,7 +8375,8 @@ class ManageOrderServiceTest {
 
         assertThat(waFieldsMap)
             .containsEntry("whenReportsMustBeFiled", LocalDate.now())
-            .containsEntry("performingUser", UserRoles.COURT_ADMIN.name());
+            .containsEntry("performingUser", UserRoles.COURT_ADMIN.name())
+            .containsEntry("isCirUpdateFollowUp", null);
         assertThat(waFieldsMap.get("whenReportsMustBeFiledByLocalAuthority")).isNull();
     }
 
@@ -8296,6 +8398,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiledByLocalAuthority(LocalDate.now())
@@ -8368,6 +8471,7 @@ class ManageOrderServiceTest {
             .applicantCaseName("Test Case")
             .createSelectOrderOptions(CreateSelectOrderOptionsEnum.blankOrderOrDirections)
             .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .manageOrders(ManageOrders.builder().checkIsThisUrgent(Yes).build())
             .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
             .serveOrderData(ServeOrderData.builder()
                                 .whenReportsMustBeFiledByLocalAuthority(LocalDate.now())
@@ -8447,6 +8551,66 @@ class ManageOrderServiceTest {
         Map<String, Object> caseDataUpdated = manageOrderService.handleFetchOrderDetails(
             "testAuth", callbackRequest, ENGLISH, null);
         assertTrue(caseDataUpdated.get("selectedOrder").toString().contains(ChildArrangementOrdersEnum.financialCompensationC82.getDisplayedValue()));
+
+    }
+
+    @Test
+    void testHandleFetchOrderDetailsForUploadFl404() {
+        CaseData caseData = CaseData.builder()
+            .id(12345L)
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .isSdoSelected(Yes)
+            .applicantCaseName("Test Case 45678")
+            .fl401FamilymanCaseNumber("familyman12345")
+            .applicants(of(element(PartyDetails.builder().doTheyHaveLegalRepresentation(YesNoDontKnow.no).build())))
+            .manageOrdersOptions(ManageOrdersOptionsEnum.uploadAnOrder)
+            .manageOrders(manageOrders)
+            .build();
+        Map<String, Object> caseDataMap = caseData.toMap(new ObjectMapper());
+        uk.gov.hmcts.reform.ccd.client.model.CaseDetails caseDetails = uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .id(12345678L)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS.getValue())
+            .data(caseDataMap)
+            .build();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(caseDetails)
+            .build();
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
+
+        Map<String, Object> caseDataUpdated = manageOrderService.handleFetchOrderDetails(
+            "testAuth", callbackRequest, ENGLISH, null);
+        assertNotNull(caseDataUpdated.get("selectedOrder"));
+
+    }
+
+    @Test
+    void testHandleFetchOrderDetailsForCreateFl404() {
+        CaseData caseData = CaseData.builder()
+            .id(12345L)
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .isSdoSelected(Yes)
+            .applicantCaseName("Test Case 45678")
+            .fl401FamilymanCaseNumber("familyman12345")
+            .applicants(of(element(PartyDetails.builder().doTheyHaveLegalRepresentation(YesNoDontKnow.no).build())))
+            .manageOrdersOptions(ManageOrdersOptionsEnum.createAnOrder)
+            .createSelectOrderOptions(CreateSelectOrderOptionsEnum.standardDirectionsOrder)
+            .selectTypeOfOrder(SelectTypeOfOrderEnum.finl)
+            .manageOrders(manageOrders)
+            .build();
+        Map<String, Object> caseDataMap = caseData.toMap(new ObjectMapper());
+        uk.gov.hmcts.reform.ccd.client.model.CaseDetails caseDetails = uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+            .id(12345678L)
+            .state(State.AWAITING_SUBMISSION_TO_HMCTS.getValue())
+            .data(caseDataMap)
+            .build();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetails(caseDetails)
+            .build();
+        when(objectMapper.convertValue(caseDataMap, CaseData.class)).thenReturn(caseData);
+
+        Map<String, Object> caseDataUpdated = manageOrderService.handleFetchOrderDetails(
+            "testAuth", callbackRequest, ENGLISH, null);
+        assertNotNull(caseDataUpdated.get("selectedOrder"));
 
     }
 }
